feat: end videos, polish logic, style custom

--- a/index.html
+++ b/index.html
@@ -321,6 +321,18 @@
           <!-- reusable SVG goes here below -->
 
           <svg style="display: none" xmlns="http://www.w3.org/2000/svg">
+            <!-- <symbol id="icon-play-bold" viewBox="0 0 220 220" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_1_1905)">
+                <path d="M110 8.89168C130.003 8.88778 149.558 14.816 166.191 25.9266C182.825 37.0372 195.79 52.831 203.446 71.3106C211.103 89.7901 213.107 110.125 209.206 129.744C205.304 149.363 195.672 167.384 181.528 181.528C167.384 195.672 149.363 205.304 129.744 209.206C110.125 213.107 89.7901 211.103 71.3106 203.446C52.8311 195.79 37.0372 182.825 25.9266 166.191C14.816 149.558 8.88783 130.003 8.89174 110C8.92833 83.1956 19.5925 57.4996 38.546 38.546C57.4996 19.5925 83.1956 8.92828 110 8.89168ZM110 0C88.2441 0 66.9767 6.45139 48.8873 18.5383C30.7979 30.6253 16.6989 47.805 8.37331 67.9048C0.0476618 88.0047 -2.1307 110.122 2.11367 131.46C6.35805 152.798 16.8345 172.398 32.2183 187.782C47.602 203.166 67.2022 213.642 88.5401 217.886C109.878 222.131 131.995 219.952 152.095 211.627C172.195 203.301 189.375 189.202 201.462 171.113C213.549 153.023 220 131.756 220 110C220 80.8262 208.411 52.8473 187.782 32.2183C167.153 11.5893 139.174 0 110 0Z" fill="white"/>
+                <path d="M167.954 110L76.5278 49.9119C76.6463 140.498 76.5278 96.0498 76.5278 170.088L167.954 110Z" fill="white"/>
+              </g>
+              <defs>
+                <clipPath id="clip0_1_1905">
+                <rect width="220" height="220" fill="white"/>
+                </clipPath>
+              </defs>
+            </symbol> -->
+
             <symbol
               id="icon-play"
               viewBox="0 0 23 30"
@@ -427,7 +439,7 @@
 
           <div id="video-slider">
             <div id="video-tiles">
-              <div class="video video-0">
+              <div data-paused="true" class="video video-0">
                 <video poster="assets/images/video/0.jpg" preload="none">
                   <source src="assets/videos/0.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
@@ -475,17 +487,18 @@
                     </svg>
                   </button>
 
-                  <span class="volume-indicator" aria-hidden="true">50%</span>
-
-                  <input
-                    type="range"
-                    class="volume"
-                    min="0"
-                    max="1"
-                    step="0.01"
-                    value="0.5"
-                    aria-label="Volume level"
-                  />
+                  <div class="volume-container">
+                    <input
+                      type="range"
+                      class="volume"
+                      min="0"
+                      max="1"
+                      step="0.01"
+                      value="0.5"
+                      aria-label="Volume level"
+                    />
+                    <span class="volume-indicator" aria-hidden="true">50%</span>
+                  </div>
 
                   <button
                     data-action="fullscreen"
@@ -504,7 +517,7 @@
                 </div>
               </div>
 
-              <div class="video video-1">
+              <div data-paused="true" class="video video-1">
                 <video poster="assets/images/video/1.jpg" preload="none">
                   <source src="assets/videos/1.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
@@ -552,17 +565,18 @@
                     </svg>
                   </button>
 
-                  <span class="volume-indicator" aria-hidden="true">50%</span>
-
-                  <input
-                    type="range"
-                    class="volume"
-                    min="0"
-                    max="1"
-                    step="0.01"
-                    value="0.5"
-                    aria-label="Volume level"
-                  />
+                  <div class="volume-container">
+                    <input
+                      type="range"
+                      class="volume"
+                      min="0"
+                      max="1"
+                      step="0.01"
+                      value="0.5"
+                      aria-label="Volume level"
+                    />
+                    <span class="volume-indicator" aria-hidden="true">50%</span>
+                  </div>
 
                   <button
                     data-action="fullscreen"
@@ -581,7 +595,7 @@
                 </div>
               </div>
 
-              <div class="video video-2">
+              <div data-paused="true" class="video video-2">
                 <video poster="assets/images/video/2.jpg" preload="none">
                   <source src="assets/videos/2.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
@@ -629,17 +643,18 @@
                     </svg>
                   </button>
 
-                  <span class="volume-indicator" aria-hidden="true">50%</span>
-
-                  <input
-                    type="range"
-                    class="volume"
-                    min="0"
-                    max="1"
-                    step="0.01"
-                    value="0.5"
-                    aria-label="Volume level"
-                  />
+                  <div class="volume-container">
+                    <input
+                      type="range"
+                      class="volume"
+                      min="0"
+                      max="1"
+                      step="0.01"
+                      value="0.5"
+                      aria-label="Volume level"
+                    />
+                    <span class="volume-indicator" aria-hidden="true">50%</span>
+                  </div>
 
                   <button
                     data-action="fullscreen"
@@ -658,7 +673,7 @@
                 </div>
               </div>
 
-              <div class="video video-3">
+              <div data-paused="true" class="video video-3">
                 <video poster="assets/images/video/3.jpg" preload="none">
                   <source src="assets/videos/3.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
@@ -706,17 +721,18 @@
                     </svg>
                   </button>
 
-                  <span class="volume-indicator" aria-hidden="true">50%</span>
-
-                  <input
-                    type="range"
-                    class="volume"
-                    min="0"
-                    max="1"
-                    step="0.01"
-                    value="0.5"
-                    aria-label="Volume level"
-                  />
+                  <div class="volume-container">
+                    <input
+                      type="range"
+                      class="volume"
+                      min="0"
+                      max="1"
+                      step="0.01"
+                      value="0.5"
+                      aria-label="Volume level"
+                    />
+                    <span class="volume-indicator" aria-hidden="true">50%</span>
+                  </div>
 
                   <button
                     data-action="fullscreen"
@@ -735,7 +751,7 @@
                 </div>
               </div>
 
-              <div class="video video-4">
+              <div data-paused="true" class="video video-4">
                 <video poster="assets/images/video/4.jpg" preload="none">
                   <source src="assets/videos/4.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
@@ -783,17 +799,18 @@
                     </svg>
                   </button>
 
-                  <span class="volume-indicator" aria-hidden="true">50%</span>
-
-                  <input
-                    type="range"
-                    class="volume"
-                    min="0"
-                    max="1"
-                    step="0.01"
-                    value="0.5"
-                    aria-label="Volume level"
-                  />
+                  <div class="volume-container">
+                    <input
+                      type="range"
+                      class="volume"
+                      min="0"
+                      max="1"
+                      step="0.01"
+                      value="0.5"
+                      aria-label="Volume level"
+                    />
+                    <span class="volume-indicator" aria-hidden="true">50%</span>
+                  </div>
 
                   <button
                     data-action="fullscreen"
@@ -826,7 +843,7 @@
                     fill-rule="evenodd"
                     clip-rule="evenodd"
                     d="M5.4777 0.219168C5.87773 0.564178 5.94259 1.19347 5.62256 1.62473L2.37578 6.00004L5.62256 10.3753C5.94259 10.8066 5.87773 11.4359 5.4777 11.7809C5.07766 12.1259 4.49394 12.056 4.17391 11.6247L0 6.00004L4.17391 0.375342C4.49394 -0.0559202 5.07766 -0.125842 5.4777 0.219168ZM9.65184 0.219168C10.0519 0.564178 10.1167 1.19347 9.7967 1.62473L6.54992 6.00004L9.7967 10.3753C10.1167 10.8066 10.0519 11.4359 9.65184 11.7809C9.2518 12.1259 8.66808 12.056 8.34805 11.6247L4.17414 6.00004L8.34805 0.375342C8.66808 -0.0559202 9.2518 -0.125842 9.65184 0.219168Z"
-                    fill="#999999"
+                    fill="var(--gray)"
                   />
                 </svg>
               </button>
@@ -847,7 +864,7 @@
                     fill-rule="evenodd"
                     clip-rule="evenodd"
                     d="M0.348162 0.219168C0.748195 -0.125841 1.33192 -0.0559201 1.65194 0.375342L5.82586 6.00004L1.65194 11.6247C1.33192 12.056 0.748195 12.1259 0.348162 11.7809C-0.0518709 11.4359 -0.116729 10.8066 0.203297 10.3753L3.45008 6.00004L0.203297 1.62473C-0.116729 1.19347 -0.0518708 0.564178 0.348162 0.219168ZM4.5223 0.219168C4.92234 -0.125842 5.50606 -0.05592 5.82609 0.375342L10 6.00004L5.82609 11.6247C5.50606 12.056 4.92234 12.1259 4.5223 11.7809C4.12227 11.4359 4.05741 10.8066 4.37744 10.3753L7.62422 6.00004L4.37744 1.62473C4.05741 1.19347 4.12227 0.564177 4.5223 0.219168Z"
-                    fill="#710707"
+                    fill="var(--gray)"
                   />
                 </svg>
               </button>
